--- a/index.html
+++ b/index.html
@@ -3,38 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Theater Group</title>
+    <title>Teatergaraget!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Theater Group</h1>
-        <p>Passionate about bringing stories to life.</p>
+        <h1>Teatergaraget!</h1>
+        <p>Världens bästa gäng av skådisar :)</p>
     </header>
     
-    <section id="team">
-        <h2>Meet Our Actors</h2>
-        <div class="profile">
-            <img src="images/member1.jpg" alt="Member 1">
-            <h3>Jane Doe</h3>
-            <p>Lead Actress</p>
-        </div>
-        <div class="profile">
-            <img src="images/member2.jpg" alt="Member 2">
-            <h3>John Smith</h3>
-            <p>Supporting Actor</p>
-        </div>
-        <!-- Add more profiles as needed -->
-    </section>
+    <div class="content">
+        <section id="team">
+            <h2>Medlemmar:</h2>
+            <div id="members">
+                <h4>Alex</h4>
+                <h4>Amina</h4>
+                <h4>Erika</h4>
+                <h4>Hampus</h4>
+                <h4>Linnéa</h4>
+                <h4>Lotten</h4>
+                <h4>Lukas</h4>
+                <h4>Pontus</h4>
+                <h4>Sara</h4>
+                <h4>Leia</h4>
+            </div>
+        </section>
 
-    <section id="events">
-        <h2>Upcoming Events</h2>
-        <ul>
-            <li><strong>Shakespeare in the Park</strong> - July 10, 2024</li>
-            <li><strong>Modern Playwrights Showcase</strong> - August 15, 2024</li>
-            <!-- Add more events as needed -->
-        </ul>
-    </section>
+        <section id="events">
+            <h2>Schema och Planer:</h2>
+            <ul>
+                <li><strong>Shakespeare in the Park</strong> - July 10, 2024</li>
+                <li><strong>Modern Playwrights Showcase</strong> - August 15, 2024</li>
+                <!-- Add more events as needed -->
+            </ul>
+        </section>
+    </div>
 
     <footer>
         <h2>Contact Us</h2>
@@ -43,3 +46,4 @@
     </footer>
 </body>
 </html>
+
