--- a/index.html
+++ b/index.html
@@ -32,11 +32,21 @@
         <section id="events">
             <h2>Schema och Planer:</h2>
             <ul>
-                <li><strong>Shakespeare in the Park</strong> - July 10, 2024</li>
-                <li><strong>Modern Playwrights Showcase</strong> - August 15, 2024</li>
+                <li><strong>Möte 1, Manus?</strong> - 18'e Juni 2024</li>
+                <li><strong>Möte 2, Manus?</strong> - 25'e Juni 2024</li>
                 <!-- Add more events as needed -->
             </ul>
         </section>
+
+        <section>
+            <h2>Nyheter:</h2>
+            <ul>
+                <li><strong>Får Skriva I Manus</strong> - Ska slängas när vi är klara med dem.</li>
+                <li><strong>Har Websida Nu!</strong> - Bra att ha en tekniker ;)</li>
+                <!-- Add more events as needed -->
+            </ul>
+        </section>
+
     </div>
 
     <footer>
