--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="content">
         <section id="team">
-            <h2>Medlemmar:</h2>
+            <h2>Activa Medlemmar:</h2>
             <div id="members">
                 <h4>Alex</h4>
                 <h4>Amina</h4>
@@ -32,8 +32,8 @@
         <section id="events">
             <h2>Schema och Planer:</h2>
             <ul>
-                <li><strong>Möte 1, Manus?</strong> - 18'e Juni 2024</li>
-                <li><strong>Möte 2, Manus?</strong> - 25'e Juni 2024</li>
+                <li><strong>18'e Juni 2024</strong> - Kom utklädd till Peter (fri tolkning). Skrivövning (Hampus), improv (Pontus), & inte swish (Lukas). Fortsätter dela upp scener och gör en skiss när Andrej byts av. Pontus tar med fika.</li>
+                <li><strong>25'e Juni 2024</strong> - Sista möte innan avbrott för sommaren?</li>
                 <!-- Add more events as needed -->
             </ul>
         </section>
@@ -41,7 +41,7 @@
         <section>
             <h2>Nyheter:</h2>
             <ul>
-                <li><strong>Får Skriva I Manus</strong> - Ska slängas när vi är klara med dem.</li>
+                <li><strong>Får Skriva I Manus</strong> - Ska slängas när vi är klara med dem (?)</li>
                 <li><strong>Har Websida Nu!</strong> - Bra att ha en tekniker ;)</li>
                 <!-- Add more events as needed -->
             </ul>
